[package]
name = "tg-guard"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

teloxide = { version = "0.13", features = [
  "macros",
  "rustls",
] }

tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "sync",
  "time"
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
